<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.omerilhanli.martichallenge.ui.main.MainViewModel" />

        <variable
            name="locationStr"
            type="String" />

        <variable
            name="viewModel"
            type="MainViewModel" />

        <variable
            name="handler"
            type="MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/Search_hint_text"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:padding="12dp"
                android:text="@={viewModel.placeTypeText}"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/img_search_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{v->handler.getPlaces(etSearch.text, locationStr)}"
                android:paddingStart="0dp"
                android:paddingEnd="12dp"
                android:src="@drawable/icn_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_places"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
