...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_place_detail_photo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/icn_place"
            app:bindPhotoReference="@{viewModel.placeDetailResponse.result.photos[0].photo_reference}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            android:paddingBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_place_detail_photo">

            <TextView
                android:id="@+id/tv_place_detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@{viewModel.placeDetailResponse.result.name}"
                android:textColor="@color/white"
                android:textSize="20sp"
...
