<resources>
    <string name="app_name">Marti Tech Challenge</string>

    <string name="Generic_msg">Loading..</string>
    <string name="Generic_ok">Tamam</string>
    <string name="Generic_yes">Evet</string>
    <string name="Generic_err">Error</string>

    <string name="Search_hint_text">Lütfen okul, cafe vs. gibi bir text girin..</string>

    <string name="Place_detail_title_name">Name:</string>
    <string name="Place_detail_title_address">Address:</string>
    <string name="Place_detail_title_average_rate">Average Rate:</string>
    <string name="Place_detail_title_total_rate">Total Rate:</string>

    <string name="Permission_denied_explanation">Konum izni kapalı görünüyor. Ayarlardan izni açmak istermisiniz</string>

    <string name="Generic_Network_Error">Lütfen internet bağlantınızı kontrol ediniz</string>
    <string name="Generic_Error">Beklenmeyen bir hata oluştu. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="Generic_Error_400">Sunucuya erişilemedi. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="Generic_Error_403">Sunucuya erişirken bir hata oluştu. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="Generic_Error_404">Sunucuya istenen kaynağı bir nedenden dolayı bulamadı. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="Generic_Error_503">Sunucu şuan erişime kapalı. Lütfen daha sonra tekrar deneyiniz.</string>

    <string name="Generic_title">Marker place title</string>

    <string name="Generic_version">v1.0 Marti Challenge</string>

</resources>
